package com.mygdx.quiz.screens;

public enum GameStatus {RUNNING, PAUSED}
